[package]
name = "big_space_rock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad ={version= "0.4.7", features=["audio"]}
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[build-dependencies]
copy_to_output = "2.2.0"
glob = "0.3"
